--- a/webpage/Styles/style.css
+++ b/webpage/Styles/style.css
@@ -15,13 +15,15 @@ h3{
     font-size: 1em;
 }
 th{
-    padding: 15px;     
+    padding: 15px;   
+    text-align: left;
 } 
 td {
   border: 1px solid black;
   padding: 15px;  
 }
 table{
+    border: 1px solid black;
     background-color: white;
     width: 80%;
     margin-top: 50px;
@@ -29,6 +31,21 @@ table{
     margin-left: auto;
     margin-right: auto;
     border-collapse: collapse;
+}
+#smartTable{
+     background-image: url(../imgs/smartphone.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;   
+}
+#nSwitch{
+    background-image: url(../imgs/switch.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;  
+}
+.arrow{
+    width: 20px;
 }
 tr{
     text-align: center;
@@ -49,6 +66,12 @@ p{
     width: 40%;
     background-color: transparent;
 }
+#formTable{
+    border: 1px;
+}
 #formTable td{
-    border: 5px;
+    border: 1px;
+}
+.tag{
+    text-align: right
 }
