--- a/webpage/Styles/style.css
+++ b/webpage/Styles/style.css
@@ -7,6 +7,26 @@ background-color: azure;
     font-family: sans-serif;
     padding: 15px;
 }
+.navIcon{
+    height: 40px;
+    margin-left: 10px;
+    margin-top: 5px;
+     margin-bottom: 5px;
+}
+.navbar-inverse {
+    background-color: #a9daf0;
+    border-color: blue;
+}
+.navbar-inverse .navbar-nav > .active > a{
+    color: black;
+    background-color: #6fcdff;
+}
+.navbar-inverse .navbar-nav > li > a {
+    color: black;
+}
+h1{
+    margin-top: 50px;
+}
 h1, h2{
     text-align: center;
 }
